Completed the version scope